# snitch

./: .Cargo.toml.swp  .gitignore  Cargo.toml  README.md
config/: log4rs.yml
src/: .lib.rs.swp  .main.rs.swp  config.rs  debounced_messenger.rs  job_delegator.rs  lib.rs  logger.rs  main.rs  snitcher.rs  spy.rs  tcp_snitch.rs
src/snitcher/: email_snitcher.rs
src/spy/: process_spy.rs  tcp_spy.rs
