[package]
name = "snitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
dns-lookup = "2.0.2"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["gzip"] }
procfs = "0.15.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
